--- a/travel_planner_app/.gitignore
+++ b/travel_planner_app/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase / Google Cloud secrets
+Firebase/classrom.json
+*.json
