--- a/adultingapp/pubspec.yaml
+++ b/adultingapp/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
   english_words: ^4.0.0
   provider: ^6.1.5
 
